syntax = "proto3";

package com.example.proto;

option java_package = "com.example.proto";

message BedrockRequest {
  string input_text = 1;
  map<string, string> parameters = 2;
}

message BedrockResponse {
  string output_text = 1;
  map<string, float> confidence_scores = 2;
  repeated string tokens = 3;
}